# CDMXMP

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  QUICKREF.md  README.md  ROADMAP.md  check_column_errors.py  pyproject.toml  requirements.txt  verify_setup.py
.github/workflows/: ci.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: datasets.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CHECKLIST_FINAL.txt  PIPELINE.md
docs/screenshots/: README.md
mobility_pulse/: __init__.py  __main__.py  clean.py  cli.py  config.py  logging_config.py
mobility_pulse/analytics/: __init__.py  aggregates.py  ppi.py
mobility_pulse/app/: __init__.py  streamlit_app.py  ui_utils.py
mobility_pulse/ingest/: c5.py  ecobici_rt.py  ecobici_trips.py  gps_cdmx.py  gtfs.py
mobility_pulse/reporting/: pdf_report.py
mobility_pulse/transform/: __init__.py  geo.py  standardize.py
mobility_pulse/validate/: quality_report.py  schemas.py
reports/: data_quality.md
tests/: test_smoke_pipeline.py
